# ccboard

./: .ctxharness.yml  .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CROSS_PLATFORM.md  Cargo.toml  IDEAS.md  LICENSE-APACHE  PHASE_H_PLAN.md  PHASE_I_TUI_PROGRESS.md  PLAN.md  PLAN_PHASE_H.md  PLAN_PHASE_I.md  PLAN_TUI_POLISH.md  PRICING_FIX.md  PUBLICATION_PLAN.md  README.md  RESUME.md  SCREENSHOTS_GUIDE.md  SECURITY.md  STATUS.md  TASK_C2_PLAN.md  TDD_EVIDENCE.md  TEST_ARC_MIGRATION.md  TEST_GUIDE_PHASE6.md  TODO.md  WEB_PARITY_PLAN.md  demo.tape  install.sh  test-sse.sh  test_export.sh  test_parser.rs  test_phase6.sh
.cargo/: config.toml
.claude/: README.md  settings.json
.claude-plugin/: marketplace.json
.claude/agents/: architect-review.md  backend-architect.md  code-reviewer.md  debugger.md  leptos-designer.md  product-designer.md  rust-ccboard.md  system-architect.md  technical-writer.md  ui-designer.md
.claude/commands/: diagnose.md  diagram.md
.claude/hooks/bash/: notification.sh  pre-commit-format.sh  session-start.sh  session-stop-test.sh  session-stop.sh
.claude/rules/: search-strategy.md
.claude/scripts/: grepai-start.sh
.claude/skills/backend-architect/: SKILL.md
.claude/skills/ccboard-remember/: SKILL.md
.claude/skills/code-simplifier/: SKILL.md
.claude/skills/cybersec/: README.md  SKILL.md  api-fuzzing-bug-bounty.md  broken-authentication.md  idor-testing.md  (+2 more)
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  roadmap_feature.md  roadmap_phase.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: plan_cc_updates.md
archive/phase-c-d-e/: README.md  RESUME_C2.md  TEST_GUIDE_PHASE_C4.md
assets/: CAPTURE_GUIDE.md  SCREENSHOT_CHECKLIST.md  demo.tape
claudedocs/: ACTION_PLAN.md  IDEAS.md  OPPORTUNITIES.md  PLAN.md  README.md  ROADMAP.md  STATUS.md  VERSION_STATUS.md  competitive-benchmark-2026-02-04.md  performance-benchmark.md  xlaude-actionable-insights.md  xlaude-analysis.md  xlaude-vs-ccboard-comparison.md
crates/ccboard/: Cargo.toml
crates/ccboard-core/: Cargo.toml
crates/ccboard-core/benches/: analytics_bench.rs  startup_bench.rs
crates/ccboard-core/src/: bookmarks.rs  error.rs  event.rs  export.rs  hook_event.rs  hook_state.rs  lib.rs  live_monitor.rs  preferences.rs  pricing.rs  quota.rs  store.rs  summaries.rs  usage_estimator.rs  watcher.rs
crates/ccboard-core/src/analytics/: anomalies.rs  discover.rs  discover_llm.rs  forecasting.rs  insights.rs  mod.rs  optimization.rs  patterns.rs  plugin_usage.rs  tests.rs  tool_chains.rs  trends.rs
crates/ccboard-core/src/cache/: claude_mem_db.rs  insights_db.rs  metadata_cache.rs  mod.rs
crates/ccboard-core/src/graph/: mod.rs  task_dag.rs
crates/ccboard-core/src/models/: activity.rs  billing_block.rs  ccboard_config.rs  claude_mem.rs  config.rs  insight.rs  invocations.rs  mod.rs  plan.rs  session.rs  stats.rs
crates/ccboard-core/src/parsers/: activity.rs  claude_global.rs  codex.rs  copilot.rs  cursor.rs  filters.rs  gemini.rs  hooks.rs  invocations.rs  mcp_config.rs  mod.rs  opencode.rs  plan_parser.rs  rules.rs  session_content.rs  session_index.rs  settings.rs  stats.rs  task.rs  todowrite.rs
crates/ccboard-core/src/pricing/: cache.rs  embedded.rs  litellm.rs  mod.rs
crates/ccboard-core/tests/: cache_integration.rs  dag_tests.rs  perf_regression.rs  plan_parser_tests.rs  security_tests.rs
crates/ccboard-core/tests/fixtures/activity/: credential_session.jsonl  destructive_session.jsonl  simple_session.jsonl
crates/ccboard-core/tests/fixtures/tasks/: task-inprogress.json  task-pending.json
crates/ccboard-ffi/: Cargo.toml
crates/ccboard-ffi/src/: lib.rs
crates/ccboard-tui/: Cargo.toml
crates/ccboard-tui/src/: app.rs  editor.rs  empty_state.rs  keybindings.rs  lib.rs  theme.rs  ui.rs
crates/ccboard-tui/src/components/: breadcrumbs.rs  command_palette.rs  confirm_dialog.rs  detail_pane.rs  error_panel.rs  help_modal.rs  list_pane.rs  mod.rs  search_bar.rs  spinner.rs  toast.rs
crates/ccboard-tui/src/tabs/: agents.rs  analytics.rs  brain.rs  config.rs  conversation.rs  costs.rs  dashboard.rs  history.rs  hooks.rs  mcp.rs  mod.rs  plugins.rs  search.rs  sessions.rs
crates/ccboard-tui/src/tabs/activity/: mod.rs  violations.rs
crates/ccboard-tui/src/tests/: mod.rs
crates/ccboard-tui/src/widgets/: mod.rs  tool_call.rs
crates/ccboard-types/: Cargo.toml
crates/ccboard-types/src/: lib.rs
crates/ccboard-types/src/analytics/: anomalies.rs  insights.rs  mod.rs  trends.rs
crates/ccboard-types/src/models/: billing_block.rs  config.rs  mod.rs  session.rs
crates/ccboard-web/: Cargo.toml  README.md  SSE-USAGE.md  Trunk.toml  build-placeholder.html  build.rs  index.html
crates/ccboard-web/src/: api.rs  app.rs  lib.rs  main.rs  router.rs  sse.rs  sse_hook.rs
crates/ccboard-web/src/components/: budget_status.rs  empty_state.rs  error_boundary.rs  forecast_chart.rs  header.rs  mod.rs  projects_breakdown.rs  search_bar.rs  session_detail_modal.rs  session_table.rs  sidebar.rs  sparkline.rs  stats_card.rs  task_graph.rs  toast.rs
crates/ccboard-web/src/pages/: activity.rs  agents.rs  analytics.rs  brain.rs  config.rs  costs.rs  dashboard.rs  history.rs  hooks.rs  mcp.rs  mod.rs  plugins.rs  search.rs  sessions.rs  task_graph.rs
crates/ccboard-web/src/utils/: export.rs  mod.rs
crates/ccboard-web/static/: reset.css  style.css
crates/ccboard-web/static/js/: d3-graph.js
crates/ccboard-web/tests/: sse_endpoint.rs
crates/ccboard/examples/: export_billing_blocks.rs
crates/ccboard/src/: cli.rs  hook.rs  main.rs  setup.rs
docs/: API.md  GUIDE.md  KEYACTIONS_REFERENCE.md  KEYBINDINGS.md  TESTING_KEYBINDINGS.md
docs/architecture/: ADR-001-single-provider-focus.md  ADR-002-gemini-cli-support-evaluation.md  README.md
examples/: settings-custom-keys.json  settings-keybindings.json
scripts/: check-rust-patterns.sh  test_phase_c4.sh
skills/ccboard/: SKILL.md
tests/: env_vars_test.sh
(+46 files in other folders)
