[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.6.5"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Florian Bruniaux"]
repository = "https://github.com/FlorianBruniaux/ccboard"
homepage = "https://github.com/FlorianBruniaux/ccboard"
documentation = "https://docs.rs/ccboard"
keywords = ["claude", "dashboard", "tui", "monitoring", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[workspace.dependencies]
# Core - Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Core - Time
chrono = { version = "0.4", features = ["serde"] }

# Core - Error handling
anyhow = "1"
thiserror = "2"

# Core - Async
tokio = { version = "1", features = ["sync", "fs", "rt-multi-thread", "io-util", "macros", "time"] }

# Core - File watching
notify = "7"
notify-debouncer-mini = "0.5"

# Core - File system
walkdir = "2"
dirs = "6"

# Core - Regex
regex = "1"

# Core - Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Core - Concurrency (AMENDED: parking_lot + dashmap)
parking_lot = "0.12"
dashmap = "6"

# Core - Caching
moka = { version = "0.12", features = ["future"] }
once_cell = "1"

# TUI
ratatui = "0.30"
crossterm = "0.28"

# Web - Leptos (AMENDED: htmx -> Leptos)
leptos = { version = "0.7", default-features = false }
leptos_axum = "0.7"
leptos_router = { version = "0.7", default-features = false }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
gloo-net = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Window",
  "Navigator",
  "Clipboard",
  "Blob",
  "BlobPropertyBag",
  "Url",
  "HtmlAnchorElement",
  "Document",
] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
open = "5"
arboard = "3"
comfy-table = "7"

# Internal crates
ccboard-core = { version = "0.6.4", path = "crates/ccboard-core" }
ccboard-tui = { version = "0.6.4", path = "crates/ccboard-tui" }
ccboard-web = { version = "0.6.4", path = "crates/ccboard-web" }

[profile.release]
opt-level = "z" # Optimize for size (critical for WASM bundle)
lto = "fat" # Full link-time optimization
codegen-units = 1 # Better optimization, slower compile
strip = true # Strip symbols
