[package]
name = "ccboard-core"
description = "Core library for ccboard - parsers, models, store, watcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Time
chrono.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Async
tokio.workspace = true

# File watching
notify.workspace = true
notify-debouncer-mini.workspace = true

# File system
walkdir.workspace = true
dirs.workspace = true

# Logging
tracing.workspace = true

# Concurrency (AMENDED)
parking_lot.workspace = true
dashmap.workspace = true

# Caching
moka.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
