[package]
name = "ccboard-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
uniffi = { version = "0.31", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros"] }
ccboard-core = { path = "../ccboard-core" }
dirs = { workspace = true }
