[package]
name = "ccboard-types"
description = "Shared data types for ccboard (no heavy dependencies)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Lightweight dependencies only (no tokio, no async runtime)
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
