[package]
name = "ccboard-web"
description = "Web frontend for ccboard using Leptos + Axum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["ssr"]
ssr = ["leptos/ssr", "leptos_axum", "dep:axum", "dep:tower-http", "dep:tokio", "dep:tokio-stream", "dep:tracing", "dep:ccboard-core", "dep:futures", "dep:anyhow", "dep:serde_yaml"]
hydrate = ["leptos/hydrate"]
csr = ["leptos/csr"]

[dependencies]
# Backend only - NOT compiled in WASM
ccboard-core = { workspace = true, optional = true }

# Leptos (always needed)
leptos = { workspace = true, default-features = false }
leptos_router = { workspace = true, default-features = false }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
futures = { version = "0.3", optional = true }

# Server-side only (SSR)
leptos_axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
serde_yaml = { version = "0.9", optional = true }

# Client-side only (WASM/Hydrate)
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
gloo-net.workspace = true
js-sys.workspace = true
web-sys.workspace = true

# Icons will be inline SVG for now (simpler, zero-cost)

# Dev-dependencies for SSR backend tests only
# These are NOT needed for WASM builds (hydrate feature)
[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
